#92, #118 bugfix: Non loaded pictures or to big pictures, too big images for landing page hero section

--- a/Itan.Application.UI/src/styles.scss
+++ b/Itan.Application.UI/src/styles.scss
@@ -6,3 +6,8 @@ html{
   height: 100%;
   overflow-y: initial;
 }
+
+.image.is-256x256 {
+  height: 256px;
+  width: 256px;
+}
